CompatHelper: bump compat for StatsBase to 0.34, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -77,7 +77,7 @@ OrdinaryDiffEq = "5, 6"
 RRTMGP = "0.7, 0.8"
 RootSolvers = "0.2, 0.3"
 StaticArrays = "1"
-StatsBase = "0.33"
+StatsBase = "0.33, 0.34"
 SurfaceFluxes = "0.6"
 TerminalLoggers = "0.1"
 Thermodynamics = "0.10"
