--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -93,7 +93,7 @@ RRTMGP = "0.7, 0.8"
 RootSolvers = "0.2, 0.3"
 SciMLBase = "1"
 StaticArrays = "1"
-StatsBase = "0.33"
+StatsBase = "0.33, 0.34"
 SurfaceFluxes = "0.6"
 TerminalLoggers = "0.1"
 Thermodynamics = "0.10"
