--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -112,7 +112,7 @@ RootSolvers = "0.2, 0.3"
 RRTMGP = "0.7, 0.8"
 SciMLBase = "1"
 StaticArrays = "1"
-StatsBase = "0.33"
+StatsBase = "0.33, 0.34"
 SurfaceFluxes = "0.6"
 TerminalLoggers = "0.1"
 Thermodynamics = "0.10"
