--- a/test/Project.toml
+++ b/test/Project.toml
@@ -108,7 +108,7 @@ RRTMGP = "0.7, 0.8"
 ReportMetrics = "0.2"
 RootSolvers = "0.2, 0.3"
 StaticArrays = "1"
-StatsBase = "0.33"
+StatsBase = "0.33, 0.34"
 SurfaceFluxes = "0.6"
 TerminalLoggers = "0.1"
 Thermodynamics = "0.10"
