--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -284,6 +284,14 @@ steps:
         agents:
           slurm_mem: 20GB
 
+      - label: ":computer: aquaplanet (ρe_tot) equilmoist allsky radiation monin_obukhov varying insolation gravity wave (raw_topo) high top"
+        command:
+          - julia --color=yes --project=examples examples/hybrid/driver.jl --z_max 45e3 --z_elem 25 --dz_bottom 300 --idealized_insolation false --vert_diff true --surface_scheme monin_obukhov --moist equil --rad allskywithclear --non_orographic_gravity_wave true --orographic_gravity_wave raw_topo --precip_model 0M --rayleigh_sponge true --alpha_rayleigh_uh 0 --zd_rayleigh 30e3 --job_id sphere_aquaplanet_rhoe_equilmoist_allsky_gw_raw --dt 400secs --t_end 18hours --dt_save_to_disk 18hours --regression_test true
+          - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir sphere_aquaplanet_rhoe_equilmoist_allsky_gw_raw --out_dir sphere_aquaplanet_rhoe_equilmoist_allsky_gw_raw
+          - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir sphere_aquaplanet_rhoe_equilmoist_allsky_gw_raw --fig_dir sphere_aquaplanet_rhoe_equilmoist_allsky_gw_raw --case_name aquaplanet
+          - julia --color=yes --project=examples regression_tests/test_mse.jl --job_id sphere_aquaplanet_rhoe_equilmoist_allsky_gw_raw --out_dir sphere_aquaplanet_rhoe_equilmoist_allsky_gw_raw
+        artifact_paths: "sphere_aquaplanet_rhoe_equilmoist_allsky_gw_raw/*"
+
       - label: ":computer: aquaplanet (ρe_tot) equilmoist with EDMF"
         command:
           - julia --color=yes --project=examples examples/hybrid/driver.jl --job_id sphere_baroclinic_wave_rhoe_equilmoist_edmf --vert_diff true --surface_scheme bulk --moist dry --dt 1secs --t_end 20secs --FLOAT_TYPE Float64 --turbconv edmf --config sphere --z_stretch false --post_process false --apply_limiter false --dt_save_to_sol 10secs --dt_save_to_disk 10secs
