--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -326,6 +326,21 @@ steps:
         agents:
           slurm_mem: 20GB
 
+      
+      - label: ":computer: Diagnostic DCMIP200 surface elevation spectra"
+        command:
+          - julia --color=yes --project=examples examples/hybrid/driver.jl --initial_condition MoistBaroclinicWave --moist equil --precip_model 0M --job_id sphere_ssp_baroclinic_wave_rhoe_equilmoist_dcmip200 --regression_test false --dt 450secs --t_end 450secs --dt_save_to_disk 1days --ode_algo SSP333 --rayleigh_sponge true --alpha_rayleigh_uh 1e-4 --alpha_rayleigh_w 1.0 --topography DCMIP200
+          - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir sphere_ssp_baroclinic_wave_rhoe_equilmoist_dcmip200 --out_dir sphere_ssp_baroclinic_wave_rhoe_equilmoist_dcmip200 
+          - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir sphere_ssp_baroclinic_wave_rhoe_equilmoist_dcmip200 --fig_dir sphere_ssp_baroclinic_wave_rhoe_equilmoist_dcmip200 --case_name elevation_spectrum
+        artifact_paths: "sphere_ssp_baroclinic_wave_rhoe_equilmoist_dcmip200/*"
+      
+      - label: ":computer: Diagnostic Earth surface elevation spectra"
+        command:
+          - julia --color=yes --project=examples examples/hybrid/driver.jl --initial_condition MoistBaroclinicWave --moist equil --precip_model 0M --job_id sphere_ssp_baroclinic_wave_rhoe_equilmoist_earth --regression_test false --dt 450secs --t_end 450secs --dt_save_to_disk 1days --ode_algo SSP333 --rayleigh_sponge true --alpha_rayleigh_uh 1e-4 --alpha_rayleigh_w 1.0 --topography Earth
+          - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir sphere_ssp_baroclinic_wave_rhoe_equilmoist_earth --out_dir sphere_ssp_baroclinic_wave_rhoe_equilmoist_earth
+          - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir sphere_ssp_baroclinic_wave_rhoe_equilmoist_earth --fig_dir sphere_ssp_baroclinic_wave_rhoe_equilmoist_earth --case_name elevation_spectrum
+        artifact_paths: "sphere_ssp_baroclinic_wave_rhoe_equilmoist_earth/*"
+      
   - group: "MPI Examples"
     steps:
 
