--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -31,6 +31,7 @@ Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+Krylov = "ba0b0d4f-ebba-5204-a429-3ac8c609bfb7"
 LambertW = "984bce1d-4616-540c-a9ee-88d1112d94c9"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
@@ -93,6 +94,7 @@ Interpolations = "0.14"
 IntervalSets = "0.5, 0.6, 0.7"
 JLD2 = "0.4"
 JSON = "0.21"
+Krylov = "0.9.0"
 LambertW = "0.4"
 NCDatasets = "0.11, 0.12"
 NCRegressionTests = "0.2"
