--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ ArtifactWrappers = "a14bc488-3040-4b00-9dc1-f6467924858a"
 Artifacts = "56f22d72-fd6d-98f1-02f0-08ddc0907c33"
 AtmosphericProfilesLibrary = "86bc3604-9858-485a-bdbe-831ec50de11d"
 CLIMAParameters = "6eacf6c3-8458-43b9-ae03-caf5306d3d53"
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 ClimaComms = "3a4d1b5c-c61d-41fd-a00a-5873ba7a1b0d"
 ClimaCore = "d414da3d-4745-48bb-8d80-42e94e092884"
 ClimaCorePlots = "cf7c7e5a-b407-4c48-9047-11a94a308626"
@@ -54,6 +55,7 @@ ArgParse = "1"
 ArtifactWrappers = "0.2"
 AtmosphericProfilesLibrary = "0.1"
 CLIMAParameters = "0.7"
+CUDA = "4"
 ClimaComms = "0.4"
 ClimaCore = "0.10"
 ClimaCorePlots = "0.2"
