--- a/test/Project.toml
+++ b/test/Project.toml
@@ -5,6 +5,7 @@ ArtifactWrappers = "a14bc488-3040-4b00-9dc1-f6467924858a"
 AtmosphericProfilesLibrary = "86bc3604-9858-485a-bdbe-831ec50de11d"
 BlockArrays = "8e7c35d0-a365-5155-bbbb-fb81a777f24e"
 CLIMAParameters = "6eacf6c3-8458-43b9-ae03-caf5306d3d53"
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 ClimaAtmos = "b2c96348-7fb7-4fe0-8da9-78d88439e717"
 ClimaComms = "3a4d1b5c-c61d-41fd-a00a-5873ba7a1b0d"
@@ -74,6 +75,7 @@ ArtifactWrappers = "0.2"
 AtmosphericProfilesLibrary = "0.1"
 BlockArrays = "0.16"
 CLIMAParameters = "0.7"
+CUDA = "4"
 ClimaComms = "0.4"
 ClimaCore = "0.10"
 ClimaCorePlots = "0.2"
