--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -72,8 +72,8 @@ steps:
       - label: "Simple GPU test"
         key: "gpu_example"
         command:
-          - "JULIA_DEBUG=all julia --project -e 'using CUDA; CUDA.versioninfo()'"
-          - "JULIA_DEBUG=all julia --color=yes --project=examples examples/hybrid/driver.jl --t_end 1mins --dt 1secs --dt_save_to_sol Inf --dt_save_to_disk Inf --job_id gpu_example --device CUDADevice"
+          - "julia --project -e 'using CUDA; CUDA.versioninfo()'"
+          - "julia --color=yes --project=examples examples/hybrid/driver.jl --t_end 1mins --dt 1secs --dt_save_to_sol Inf --dt_save_to_disk Inf --job_id gpu_example --device CUDADevice --ode_algo SSP33ShuOsher"
         artifact_paths: "gpu_example/*"
         agents:
           slurm_gres: "gpu:1"
