Revert "Move from bors to GitHub Merge Queue"
This reverts commit 25a8f96dff9b587f9924a490a64b977bc683642f.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,10 @@ on:
   push:
     branches:
       - main
+      - trying
+      - staging
     tags: '*'
   pull_request:
-  merge_group:
 
 jobs:
   test:
