--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,9 +4,10 @@ on:
   push:
     branches:
       - main
+      - trying
+      - staging
     tags: '*'
   pull_request:
-  merge_group:
 
 jobs:
   docbuild:
